# SoundLIB

./: CMakeLists.txt  README.md  WAV.h  main.c
src/: WAV.h  main.c  mp3.c  mp3.h  wav.c
